@@ -126,14 +126,6 @@ function addHooks(doc) {
     }
 }
 
-var iframeMenuOpen = false;
-function iframeClickHandler(e) {
-    storeClickOrTouchPos(e);
-    if (iframeMenuOpen) {
-        bus.$emit('iframe-hideMenu');
-    }
-}
-
 function otherClickHandler(e) {
     var target = e.target || e.srcElement;
     var href = undefined;
@@ -158,7 +150,6 @@ function otherClickHandler(e) {
     if (href && !href.startsWith('#')) {
         bus.$emit('iframe-href', href, undefined, clearHistoryOf);
     }
-    iframeClickHandler(e);
 }
 
 function clickDirSelect(elem) {
@@ -566,11 +557,11 @@ function applyModifications(page, textCol, darkUi, src) {
             }
         }
 
-        if (content) {
+        if (content && ('other'==page || 'extras'==page || 'lms'==page)) {
             if (content.addEventListener) {
-                content.addEventListener('click', 'other'==page || 'extras'==page || 'lms'==page ? otherClickHandler : iframeClickHandler);
+                content.addEventListener('click', otherClickHandler);
             } else if (content.attachEvent) {
-                content.attachEvent('onclick', 'other'==page || 'extras'==page || 'lms'==page ? otherClickHandler : iframeClickHandler);
+                content.attachEvent('onclick', otherClickHandler);
             }
         }
 
@@ -676,25 +667,9 @@ Vue.component('lms-iframe-dialog', {
      <v-toolbar-title v-if="playerId && numPlayers>1 && (page=='player' || page=='extras')" @click="openChoiceMenu" class="pointer">{{title}}</v-toolbar-title>
      <v-toolbar-title v-else>{{title}}</v-toolbar-title>
      <v-spacer class="drag-area"></v-spacer>
-     <v-menu bottom left v-model="showMenu" v-if="actions.length>0 || (customActions && customActions.length>0)">
-      <v-btn icon slot="activator"><v-icon>more_vert</v-icon></v-btn>
-      <v-list>
-       <template v-for="(item, index) in actions">
-        <v-divider v-if="item===DIVIDER"></v-divider>
-        <v-list-tile v-else @click="doAction(item, $event)">
-         <v-list-tile-avatar><v-icon v-if="item.icon">{{item.icon}}</v-icon></v-list-tile-avatar>
-         <v-list-tile-content><v-list-tile-title>{{item.title}}</v-list-tile-title></v-list-tile-content>
-        </v-list-tile>
-       </template>
-       <v-divider v-if="actions.length>0 && (customActions && customActions.length>0)"></v-divider>
-       <template v-if="customActions && customActions.length>0" v-for="(action, index) in customActions">
-        <v-list-tile @click="doCustomAction(action, player)">
-         <v-list-tile-avatar><v-icon v-if="action.icon">{{action.icon}}</v-icon><img v-else-if="action.svg" class="svg-img" :src="action.svg | svgIcon(darkUi)"></img></v-list-tile-avatar>
-         <v-list-tile-content><v-list-tile-title>{{action.title}}</v-list-tile-title></v-list-tile-content>
-        </v-list-tile>
-       </template>
-      </v-list>
-     </v-menu>
+     <template v-for="(item, index) in actions">
+      <v-btn icon @click="doAction(item, $event)" :title="item.title"><v-icon v-if="item.icon">{{item.icon}}</v-icon><img v-else-if="item.svg" class="svg-img" :src="item.svg | svgIcon(darkUi)"></img></v-btn>
+     </template>
      <div class="drag-area-right"></div>
      <lms-windowcontrols v-if="queryParams.nativeTitlebar"></lms-windowcontrols>
     </v-toolbar>
@@ -808,14 +783,8 @@ Vue.component('lms-iframe-dialog', {
         bus.$on('iframe-close', function() {
             this.close();
         }.bind(this));
-        bus.$on('iframe-hideMenu', function() {
-            this.showMenu = false;
-        }.bind(this));
         bus.$on('noPlayers', function() {
             this.close();
-        }.bind(this));
-        bus.$on('closeMenu', function() {
-            this.showMenu = false;
         }.bind(this));
         bus.$on('closeDialog', function(dlg) {
             if (dlg == 'iframe') {
@@ -893,7 +862,6 @@ Vue.component('lms-iframe-dialog', {
             }
 
             this.show = false;
-            this.showMenu = false;
             this.history = [];
             this.src = undefined;
             iframeInfo.content=undefined;
@@ -946,7 +914,6 @@ Vue.component('lms-iframe-dialog', {
             this.title=parts.join(SEPARATOR);
             this.src = this.src.replace(this.playerId, player.id);
             this.show = true;
-            this.showMenu = false;
             this.choiceMenu = {show:false, x:this.choiceMenu.x}
             this.loaded = false;
             this.startLoadTimer();
@@ -992,10 +959,6 @@ Vue.component('lms-iframe-dialog', {
     watch: {
         'show': function(val) {
             this.$store.commit('dialogOpen', {name:'iframe', shown:val});
-        },
-        'showMenu': function(val) {
-            iframeMenuOpen = val;
-            this.$store.commit('menuVisible', {name:'iframe', shown:val});
         },
         'choiceMenu.show': function(val) {
             this.$store.commit('menuVisible', {name:'iframe-choice', shown:val});
