@@ -1,3 +1,8 @@
+x.x.x
+-----
+1. Combine man menu and players menu into left hand navigation drawer.
+2. Remove most dialog toolbar menus and replace with buttons.
+
 5.3.3
 -----
 1. Save player settings before opening 'Extra settings'.
